Update event to active
